// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentNode parser should add nodes 1`] = `
"type Viewer {
  user: User
  tasks: Task @connection
}

type User @model {
  id: ID!
  firstName: String
  lastName: String
  email: AWSEmail @auth(rules: [{allow: "owner"}])
  picture: AWSURL
}

type Task @model {
  id: ID!
  title: String!
  content: AWSJSON
}

type Query {
  hello: String
  node(id: ID!): Node @auth
}

interface Node {
  id: ID!
}"
`;

exports[`DocumentNode parser should serialize document 1`] = `
"type Viewer {
  user: User
  tasks: Task @connection
}

type User @model {
  id: ID!
  firstName: String
  lastName: String
  email: AWSEmail @auth(rules: [{allow: "owner"}])
  picture: AWSURL
}

type Task @model {
  id: ID!
  title: String!
  content: AWSJSON
}

type Query {
  hello: String
}"
`;
